--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -2044,16 +2044,31 @@ textures:
             'TR-roads-5char': [648, 222, 64, 38]
             'TR:motorway-5char': [648, 222, 64, 38]
             'MY:expressway-5char': [648, 222, 64, 38]
-            'ZA:M-1char': [378, 388, 36, 54]
-            'ZA:M-2char': [334, 390, 38, 50]
-            'ZA:M-3char': [282, 390, 46, 50]
-            'ZA:M-4char': [222, 390, 54, 50]
-            'ZA:M-5char': [156, 388, 60, 52]
-            'ZA:P-1char': [0, 448, 46, 50]
-            'ZA:P-2char': [920, 390, 50, 50]
-            'ZA:P-3char': [856, 390, 58, 50]
-            'ZA:P-4char': [780, 390, 70, 50]
-            'ZA:P-5char': [696, 390, 78, 50]
+            'ZA:metropolitan-1char': [378, 388, 36, 54]
+            'ZA:metropolitan-2char': [334, 390, 38, 50]
+            'ZA:metropolitan-3char': [282, 390, 46, 50]
+            'ZA:metropolitan-4char': [222, 390, 54, 50]
+            'ZA:metropolitan-5char': [156, 388, 60, 52]
+            'ZA:national-1char': [322, 448, 46, 44]
+            'ZA:national-2char': [266, 448, 50, 44]
+            'ZA:national-3char': [200, 448, 58, 44]
+            'ZA:national-4char': [128, 448, 64, 44]
+            'ZA:national-5char': [50, 448, 74, 44]
+            'ZA:provincial-1char': [0, 448, 46, 50]
+            'ZA:provincial-2char': [920, 390, 50, 50]
+            'ZA:provincial-3char': [856, 390, 58, 50]
+            'ZA:provincial-4char': [780, 390, 70, 50]
+            'ZA:provincial-5char': [696, 390, 78, 50]
+            'ZA:regional-1char': [654, 390, 36, 38]
+            'NO:riksvei-1char': [654, 390, 36, 38]
+            'ZA:regional-2char': [604, 390, 42, 38]
+            'NO:riksvei-2char': [604, 390, 42, 38]
+            'ZA:regional-3char': [550, 390, 48, 38]
+            'NO:riksvei-3char': [550, 390, 48, 38]
+            'ZA:regional-4char': [488, 390, 56, 38]
+            'NO:riksvei-4char': [488, 390, 56, 38]
+            'ZA:regional-5char': [420, 390, 62, 38]
+            'NO:riksvei-5char': [420, 390, 62, 38]
             'ru:national-1char': [334, 668, 42, 36]
             'RU:national-1char': [334, 668, 42, 36]
             'GB:M-road-1char': [334, 668, 42, 36]
@@ -2173,26 +2188,6 @@ textures:
             'FI:LR-7char': [930, 616, 82, 36]
             'UA:M-7char': [930, 616, 82, 36]
             'UA:P-7char': [930, 616, 82, 36]
-            'za:national-1char': [322, 448, 46, 44]
-            'za:national-2char': [266, 448, 50, 44]
-            'za:national-3char': [200, 448, 58, 44]
-            'za:national-4char': [128, 448, 64, 44]
-            'za:national-5char': [50, 448, 74, 44]
-            'za:regional-1char': [654, 390, 36, 38]
-            'ZA:R-1char': [654, 390, 36, 38]
-            'NO:riksvei-1char': [654, 390, 36, 38]
-            'za:regional-2char': [604, 390, 42, 38]
-            'ZA:R-2char': [604, 390, 42, 38]
-            'NO:riksvei-2char': [604, 390, 42, 38]
-            'za:regional-3char': [550, 390, 48, 38]
-            'ZA:R-3char': [550, 390, 48, 38]
-            'NO:riksvei-3char': [550, 390, 48, 38]
-            'za:regional-4char': [488, 390, 56, 38]
-            'ZA:R-4char': [488, 390, 56, 38]
-            'NO:riksvei-4char': [488, 390, 56, 38]
-            'za:regional-5char': [420, 390, 62, 38]
-            'ZA:R-5char': [420, 390, 62, 38]
-            'NO:riksvei-5char': [420, 390, 62, 38]
             generic_shield-1char: [552, 0, 38, 36]
             generic_shield-2char: [498, 0, 50, 36]
             generic_shield-3char: [424, 0, 68, 36]
